@@ -1,0 +1,28 @@
+#! /bin/sh
+
+# Copyright (C) 2014 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+tests=tests
+
+test -d $tests || mkdir -p $tests
+
+TEXMFCNF=$srcdir/../../kpathsea
+export TEXMFCNF
+
+sed -e'/CHECKSUM/d' $srcdir/$tests/shorten.opl >$tests/shortend.in
+
+echo && echo "pltotf $tests/shortend.in $tests/shortend.tfm" && \
+  ../pltotf $tests/shortend.in $tests/shortend.tfm || exit
+
+echo && echo "omfonts -ofm2opl $tests/shorten.tfm $tests/shortend.pl" && \
+  ./omfonts -ofm2opl $tests/shortend.tfm $tests/shortend.pl || exit
+
+echo && echo "omfonts -opl2ofm $tests/shorten $tests/shortend" && \
+  ./omfonts -opl2ofm $srcdir/$tests/shorten $tests/shortend || exit
+
+echo && echo "omfonts -ofm2opl $tests/shorten $tests/shortend" && \
+  ./omfonts -ofm2opl $tests/shortend $tests/shortend || exit
+
+diff $tests/shortend.pl $tests/shortend.opl || exit
+
