@@ -1,0 +1,26 @@
+#! /bin/sh
+
+# Copyright (C) 2014 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+tests=omegaware/tests
+
+test -d $tests || mkdir -p $tests
+
+TEXMFCNF=$srcdir/../kpathsea
+export TEXMFCNF
+
+echo && echo "pltotf $tests/shorten.opl $tests/shortend.tfm" && \
+  ./pltotf $srcdir/$tests/shorten.opl $tests/shortend.tfm || exit
+
+echo && echo "wofm2opl $tests/shorten.tfm $tests/shortend.pl" && \
+  ./wofm2opl $tests/shortend.tfm $tests/shortend.pl || exit
+
+echo && echo "wopl2ofm $tests/shorten $tests/shortend" && \
+  ./wopl2ofm $srcdir/$tests/shorten $tests/shortend || exit
+
+echo && echo "wofm2opl $tests/shorten $tests/shortend" && \
+  ./wofm2opl $tests/shortend $tests/shortend || exit
+
+diff $tests/shortend.pl $tests/shortend.opl || exit
+
